# FFmpegGD

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SConstruct  build_profile.json
.github/workflows/: ci.yml  make_build.yml
android_plugin/src/main/: AndroidManifest.xml
android_plugin/src/main/assets/addons/ffmpeg_gd_android/: ffmpeg_gd.gdextension
android_plugin/src/main/java/org/godotengine/plugin/android/ffmpeggd/: FFmpegGDPlugin.java
demo/: export_presets.cfg  external_texture.gdshader  external_texture.gdshader.uid  main.tscn  nv12_to_rgb.gdshader  nv12_to_rgb.gdshader.uid  player_ffmpeg_gd.gd  player_ffmpeg_gd.gd.uid  project.godot  sysfont.tres  video_3d_demo.gd  video_3d_demo.gd.uid  video_3d_demo.tscn  video_3d_yuv.gdshader  video_3d_yuv.gdshader.uid
demo/addons/ffmpeg_gd_android/: export_plugin.gd  export_plugin.gd.uid  plugin.cfg
src/: ffmpeg_player.cpp  ffmpeg_player.h  ffmpeg_player_android.cpp  ffmpeg_player_cpu.cpp  ffmpeg_player_d3d12.cpp  ffmpeg_player_platform_stubs.cpp  ffmpeg_player_videotoolbox.mm  ffmpeg_player_vulkan.cpp  ios_document_picker.h  ios_document_picker.mm  register_types.cpp  vulkan_device_hook.cpp  vulkan_device_hook.h
